Vertex AI support for the following operations: